Updated Heading para

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <h1 class="header-heading">Cash Register App</h1>
-        <p class="header-para">Enter the Total bill and cash amount to get the minimum number of notes to return.</p>
+        <p class="header-para">Enter the Bill amount and Cash given to get the minimum number of notes to return.</p>
     </header>
     <main>
         <div class="bill">
